@@ -1,6 +1,6 @@
 chan_capi a Common ISDN API 2.0 implementation for Asterisk
 
- Copyright (C) 2005-2009 Cytronics & Melware
+ Copyright (C) 2005-2010 Cytronics & Melware
  Armin Schindler <armin@melware.de>
  
  Reworked, but based on the work of
