@@ -1,6 +1,13 @@
 CHANGES
 =======
 
+chan_capi-1.1.5
+------------------
+- corrected check for Info value on CONNECT_B3_CONF
+- fixed NULL-pointer in cid_name (asterisk 1.6 pickup revealed this)
+- changed action on prodding in .write function to ignore it
+- API adaptions to new asterisk trunk
+
 chan_capi-1.1.4
 ------------------
 - use extended fax if available only and have fine resolution on receive activated by default
